--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color:blue;
         }
     </style>
-    <title>Db php API</title>
+    <title>PHP API</title>
 </head>
 <body>
     <h1>RESTFUL API database</h1>
